# loadstar_sensors_interface_python

./: .channels.scm  .emacs  .guix.scm  .metadata.org  .single-source-of-truth.org  77-loadstar-sensors.rules  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  codemeta.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.meta-python/: metadata.org
.meta-python/guix/: channels.scm  guix.scm
.metadata/: Makefile  metadata.org
.metadata-python/: Makefile  metadata.org
.metadata-python/guix/: guix.scm
.metadata/docker/: Dockerfile  Dockerfile.dev
.metadata/emacs/: init.el
.metadata/guix/: channels.scm  guix.scm
loadstar_sensors_interface/: __about__.py  __init__.py  cli.py  loadstar_sensors_interface.py
src/loadstar_sensors_interface/: __about__.py  __init__.py  __main__.py  cli.py
