# setup.cfg is generated automatically from .single-source-of-truth.org
# File edits may be overwritten!
[metadata]
name = loadstar_sensors_interface
version = 0.1.0
author = Peter Polidoro
author_email = peter@polidoro.io
url = https://github.com/janelia-pypi/loadstar_sensors_interface_python
description = Python interface to Loadstar Sensors USB devices.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    serial_interface

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    loadstar_sensors_interface.tests*

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
