# setup.cfg is generated automatically from .single-source-of-truth.org
# File edits may be overwritten!
[metadata]
name = loadstar_sensors_interface
version = 0.5.0
author = Peter Polidoro
author_email = peter@polidoro.io
url = https://github.com/janelia-pypi/loadstar_sensors_interface_python
description = Python interface to Loadstar Sensors USB devices.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
install_requires =
    serial_interface
    click
    plotext

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    loadstar = loadstar_sensors_interface.cli:main
